# sglang-visual

./: .gitignore  GEMINI.md  README.md  generate_presets.py
backend/: pyproject.toml
backend/sglang_tp_viz/: cli.py  config_loader.py  schema.py  tp_analyzer.py
backend/sglang_tp_viz/families/: base.py  deepseek_v2.py  llama.py
backend/tests/: test_shapes.py
docs/superpowers/plans/: 2026-03-27-sglang-optimization-p0.md
docs/superpowers/specs/: 2026-03-27-sglang-optimization-visualizer-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/presets/: deepseek_v2_lite.json  deepseek_v3.json  llama3_70b.json  llama3_8b.json  manifest.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/architecture/: ArchitectureDiagram.css  ArchitectureDiagram.tsx
frontend/src/components/connections/: Connections.css  SankeyConnector.tsx
frontend/src/components/controlplane/: ControlPlaneView.css  ControlPlaneView.tsx
frontend/src/components/controls/: Controls.css  GpuControls.tsx  ModelSelector.tsx  PlaneTabBar.tsx  TpSizeSelector.tsx
frontend/src/components/gpu/: GpuCard.tsx  GpuMemoryPanel.css  GpuMemoryPanel.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/hooks/: useModelData.ts
frontend/src/pages/: ComputePlanePage.tsx  ControlPlanePage.tsx  KVCachePage.css  KVCachePage.tsx  SchedulingPage.css  SchedulingPage.tsx
frontend/src/types/: model.ts
frontend/src/utils/: gpuMemoryMath.ts  layoutMath.ts  sankeyMath.ts  tpMath.ts
(+42 files in other folders)
